HACK: Make changes that depend on my fork of docker-py [1].
This is kind of horrible but we can't really do anything until my
PR [2] gets upstreamed and a new stable release is made.

[1] https://github.com/delcypher/docker-py/tree/2.2.1-release-cpuset-hacks
[2] https://github.com/docker/docker-py/pull/1583

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-docker==2.2.1
+# HACK:
+# 1. Clone https://github.com/delcypher/docker-py/tree/2.2.1-release-cpuset-hacks
+# 2. Run `pip install -e .` in that directory
+#
+# This will install my fork of docker-py.
+# You should do this in a python virtualenv to limit the damage to your system.
+#docker==2.2.1
 psutil==4.3.1
 jsonschema==2.5.1
 PyYAML==3.12
